--- a/app/webroot/css/table.css
+++ b/app/webroot/css/table.css
@@ -62,4 +62,9 @@
 .grille-gestion input,
 .grille-gestion select {
   width: 80px;
+  height: 24px;
+  line-height: 24px;
+}
+.grille-gestion input[type="number"] {
+  padding: 0px;
 }
